fix: return scalar value from resultset in nested queries
Fixed issue #1723

(cherry picked from commit be8693a363c5b2b45540deaef700bd4395c4e387)