@@ -30,6 +30,8 @@ import com.arcadedb.query.sql.executor.Result;
 import com.arcadedb.query.sql.executor.ResultInternal;
 import com.arcadedb.utility.DateUtils;
 
+import com.arcadedb.query.sql.executor.ResultSet;
+
 import java.math.*;
 import java.time.*;
 import java.time.temporal.*;
@@ -40,6 +42,45 @@ public class MathExpression extends SimpleNode {
   private static final Object               NULL_VALUE       = new Object();
   protected            List<MathExpression> childExpressions = new ArrayList<MathExpression>();
   protected final      List<Operator>       operators        = new ArrayList<>();
+
+  /**
+   * Extracts a scalar value from a ResultSet for use in arithmetic operations.
+   * <p>
+   * When a LET variable contains a ResultSet (e.g., from SELECT max(value) FROM ...),
+   * and it's used directly in arithmetic like $max + 1, we need to extract the actual
+   * scalar value instead of operating on the ResultSet object itself.
+   * <p>
+   * This method extracts the value if:
+   * - The object is a ResultSet with exactly one result
+   * - That result has exactly one property (excluding metadata)
+   * <p>
+   * Issue: https://github.com/ArcadeData/arcadedb/issues/1723
+   *
+   * @param value the value to potentially extract from
+   * @return the extracted scalar value, or the original value if extraction is not applicable
+   */
+  private static Object extractScalarFromResultSet(Object value) {
+    if (value instanceof ResultSet resultSet) {
+      // Check if we can extract a single scalar value
+      if (resultSet instanceof com.arcadedb.query.sql.executor.InternalResultSet internalResultSet) {
+        // InternalResultSet has countEntries() to check size without consuming
+        if (internalResultSet.countEntries() == 1) {
+          internalResultSet.reset(); // Reset to beginning
+          final Result result = internalResultSet.next();
+          internalResultSet.reset(); // Reset again for future use
+
+          // Get the property names (excluding metadata)
+          final Set<String> propertyNames = result.getPropertyNames();
+          if (propertyNames.size() == 1) {
+            // Single property - extract its value
+            final String propertyName = propertyNames.iterator().next();
+            return result.getProperty(propertyName);
+          }
+        }
+      }
+    }
+    return value;
+  }
 
   public Expression getExpandContent() {
     throw new CommandExecutionException("Invalid expand expression");
@@ -681,12 +722,13 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.get(0).execute(currentRecord, context);
+      return childExpressions.getFirst().execute(currentRecord, context);
 
     if (childExpressions.size() == 2) {
-      final Object leftValue = childExpressions.get(0).execute(currentRecord, context);
-      final Object rightValue = childExpressions.get(1).execute(currentRecord, context);
-      return operators.get(0).apply(leftValue, rightValue);
+      // Extract scalar values from ResultSets for arithmetic operations (issue #1723)
+      final Object leftValue = extractScalarFromResultSet(childExpressions.getFirst().execute(currentRecord, context));
+      final Object rightValue = extractScalarFromResultSet(childExpressions.get(1).execute(currentRecord, context));
+      return operators.getFirst().apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(currentRecord, context);
@@ -697,12 +739,13 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.get(0).execute(currentRecord, context);
+      return childExpressions.getFirst().execute(currentRecord, context);
 
     if (childExpressions.size() == 2) {
-      final Object leftValue = childExpressions.get(0).execute(currentRecord, context);
-      final Object rightValue = childExpressions.get(1).execute(currentRecord, context);
-      return operators.get(0).apply(leftValue, rightValue);
+      // Extract scalar values from ResultSets for arithmetic operations (issue #1723)
+      final Object leftValue = extractScalarFromResultSet(childExpressions.getFirst().execute(currentRecord, context));
+      final Object rightValue = extractScalarFromResultSet(childExpressions.get(1).execute(currentRecord, context));
+      return operators.getFirst().apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(currentRecord, context);
@@ -712,13 +755,15 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.get(0);
-    final Object val = nextExpression.execute(currentRecord, context);
+    final MathExpression nextExpression = childExpressions.getFirst();
+    // Extract scalar from ResultSet for arithmetic operations (issue #1723)
+    final Object val = extractScalarFromResultSet(nextExpression.execute(currentRecord, context));
     valuesStack.push(val == null ? NULL_VALUE : val);
 
     for (int i = 0; i < operators.size() && i + 1 < childExpressions.size(); i++) {
       final Operator nextOperator = operators.get(i);
-      final Object rightValue = childExpressions.get(i + 1).execute(currentRecord, context);
+      // Extract scalar from ResultSet for arithmetic operations (issue #1723)
+      final Object rightValue = extractScalarFromResultSet(childExpressions.get(i + 1).execute(currentRecord, context));
 
       if (!operatorsStack.isEmpty() && operatorsStack.peek().getPriority() <= nextOperator.getPriority()) {
         Object right = valuesStack.poll();
@@ -740,13 +785,15 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.get(0);
-    final Object val = nextExpression.execute(currentRecord, context);
+    final MathExpression nextExpression = childExpressions.getFirst();
+    // Extract scalar from ResultSet for arithmetic operations (issue #1723)
+    final Object val = extractScalarFromResultSet(nextExpression.execute(currentRecord, context));
     valuesStack.push(val == null ? NULL_VALUE : val);
 
     for (int i = 0; i < operators.size() && i + 1 < childExpressions.size(); i++) {
       final Operator nextOperator = operators.get(i);
-      final Object rightValue = childExpressions.get(i + 1).execute(currentRecord, context);
+      // Extract scalar from ResultSet for arithmetic operations (issue #1723)
+      final Object rightValue = extractScalarFromResultSet(childExpressions.get(i + 1).execute(currentRecord, context));
 
       if (!operatorsStack.isEmpty() && operatorsStack.peek().getPriority() <= nextOperator.getPriority()) {
         Object right = valuesStack.poll();
@@ -868,7 +915,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.get(0).isIndexedFunctionCall(context);
+    return this.childExpressions.getFirst().isIndexedFunctionCall(context);
   }
 
   public long estimateIndexedFunction(final FromClause target, final CommandContext context, final BinaryCompareOperator operator,
@@ -876,7 +923,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return -1;
     }
-    return this.childExpressions.get(0).estimateIndexedFunction(target, context, operator, right);
+    return this.childExpressions.getFirst().estimateIndexedFunction(target, context, operator, right);
   }
 
   public Iterable<Record> executeIndexedFunction(final FromClause target, final CommandContext context,
@@ -885,7 +932,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return null;
     }
-    return this.childExpressions.get(0).executeIndexedFunction(target, context, operator, right);
+    return this.childExpressions.getFirst().executeIndexedFunction(target, context, operator, right);
   }
 
   /**
@@ -903,7 +950,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.get(0).canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
+    return this.childExpressions.getFirst().canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
   }
 
   /**
@@ -920,7 +967,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.get(0).allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
+    return this.childExpressions.getFirst().allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
   }
 
   /**
@@ -939,12 +986,12 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.get(0).executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
+    return this.childExpressions.getFirst().executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
   }
 
   public boolean isBaseIdentifier() {
     if (this.childExpressions != null && childExpressions.size() == 1)
-      return childExpressions.get(0).isBaseIdentifier();
+      return childExpressions.getFirst().isBaseIdentifier();
 
     return false;
   }
@@ -981,7 +1028,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.get(0).isCount();
+    return this.childExpressions.getFirst().isCount();
   }
 
   public SimpleNode splitForAggregation(final AggregateProjectionSplit aggregateProj, final CommandContext context) {
@@ -1056,7 +1103,7 @@ public class MathExpression extends SimpleNode {
     if (childExpressions.size() != 1)
       throw new CommandExecutionException("cannot apply REMOVE " + this);
 
-    childExpressions.get(0).applyRemove(result, context);
+    childExpressions.getFirst().applyRemove(result, context);
   }
 }
 /* JavaCC - OriginalChecksum=c255bea24e12493e1005ba2a4d1dbb9d (do not edit this line) */
